modified:   css/styles.css 	modified:   css/styles.css.map 	modified:   index.html 	new file:   public/img/summer/summer_flamingo.png 	new file:   public/img/summer/summer_shadow.png 	new file:   public/img/summer/summer_shells.png 	modified:   scss/blocks/choose.scss 	new file:   scss/blocks/summer.scss 	modified:   scss/main.scss

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
             </div>
         </div>
     </section>
+
+    <!-- SUMMER -->
+    <section class="summer">
+        <h2 class="summer__title">
+            <span>Sum</span>
+            <span>mer</span>
+        </h2>
+        <span class="summer__text">solana summer - it is time to roket</span>
+        <div class="summer__flamingo">
+            <img src="public/img/summer/summer_flamingo.png" alt="" width="996px" height="990" loading="lazy">
+        </div>
+    </section>
 </body>
 
 </html>
